Fix width overflow bug

--- a/src/index.scss
+++ b/src/index.scss
@@ -172,6 +172,7 @@ html{
   background: white;
   cursor: pointer;
   position: absolute;
+  width: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
